--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "id": "bff9fbd0-9e9e-482c-928a-06e58c1a72f5",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ce7114c5-3b99-44b8-913a-448108dd508a",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "435b9e3c-c09e-40b6-a4f2-eeaecbd2b724",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "0f60cd45-fbdb-4bc6-afc8-2bf5e53aa56f",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,18 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e0e5190e-aba0-488b-93d6-c107e22518f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictors = ['Volume','Open', 'High', 'Low', \n",
-    "              'SMA_20', 'RSI', 'slowk', 'slowd', 'MACD', 'MACD_signal', 'MACD_hist', 'upper_band', 'middle_band', 'lower_band']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "48b86efe-0ca7-4a65-812c-c2af1340788d",
    "metadata": {},
    "outputs": [],
@@ -318,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "5f97ec4f-9a3e-459b-a3f3-d7c69a11b1b5",
    "metadata": {},
    "outputs": [
@@ -343,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "7f96b7b4-fdff-4fe2-8541-7d80920873bf",
    "metadata": {},
    "outputs": [],
@@ -375,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "cee62b65-a26c-4c34-9aec-533f00a76e1d",
    "metadata": {},
    "outputs": [],
@@ -392,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "83253c3d-d2b7-4c6e-acce-3eb23e010a32",
    "metadata": {},
    "outputs": [],
@@ -409,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "9bfba897-337a-4aef-8e5b-694eab650634",
    "metadata": {},
    "outputs": [],
@@ -421,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "d5990c51-ad21-4dbc-808f-93843f6a7007",
    "metadata": {},
    "outputs": [
@@ -447,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "ec0f3752-ebe2-46f7-b279-bc0d72d3200a",
    "metadata": {},
    "outputs": [
@@ -477,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "id": "0df5b967-c740-40c9-9c20-881f510917e7",
    "metadata": {},
    "outputs": [
@@ -501,8 +490,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "id": "76fe1f22-7e1d-4898-9bdd-b1d73fca17dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
+       "             colsample_bylevel=None, colsample_bynode=None,\n",
+       "             colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
+       "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
+       "             gamma=1, grow_policy=None, importance_type=None,\n",
+       "             interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+       "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "             max_delta_step=None, max_depth=None, max_leaves=None,\n",
+       "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "             multi_strategy=None, n_estimators=200, n_jobs=None,\n",
+       "             num_parallel_tree=None, random_state=None, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">XGBRegressor</label><div class=\"sk-toggleable__content\"><pre>XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
+       "             colsample_bylevel=None, colsample_bynode=None,\n",
+       "             colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
+       "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
+       "             gamma=1, grow_policy=None, importance_type=None,\n",
+       "             interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+       "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "             max_delta_step=None, max_depth=None, max_leaves=None,\n",
+       "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "             multi_strategy=None, n_estimators=200, n_jobs=None,\n",
+       "             num_parallel_tree=None, random_state=None, ...)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "XGBRegressor(base_score=None, booster=None, callbacks=None,\n",
+       "             colsample_bylevel=None, colsample_bynode=None,\n",
+       "             colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
+       "             enable_categorical=False, eval_metric=None, feature_types=None,\n",
+       "             gamma=1, grow_policy=None, importance_type=None,\n",
+       "             interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+       "             max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "             max_delta_step=None, max_depth=None, max_leaves=None,\n",
+       "             min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "             multi_strategy=None, n_estimators=200, n_jobs=None,\n",
+       "             num_parallel_tree=None, random_state=None, ...)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb_model = xgb.XGBRegressor(gamma=1, n_estimators=200)\n",
+    "xgb_model.fit(X_train_2dim, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "21b80f87-0105-4225-8a61-0d0becab9062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4bced6c1-29b4-4579-a889-71e4c9fe02f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.42983532697178"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_val = xgb_model.predict(X_val_2dim)\n",
+    "mae = mean_absolute_error(y_val, pred_val)\n",
+    "mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc28fdb5-63e6-4b8c-b1d9-2ac03ccd44e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#try use percentage to split train and test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "359f73f1-797b-4411-8654-91c8298f9baa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_test_split2(data, percentage):\n",
+    "    assert type(data) == pd.core.frame.DataFrame, \"data must be a dataframe\"\n",
+    "    assert type(percentage) == float, \"percentage must be a float\"\n",
+    "\n",
+    "    train = data.iloc[:int(len(data) * percentage)]\n",
+    "    test = data.iloc[int(len(data) * percentage):]\n",
+    "    \n",
+    "    return train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8e4f2f27-25eb-4377-977f-9b46587f1e80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_set2 shape: (2228, 15)\n",
+      "validation_set2 shape: (558, 15)\n",
+      "test2 shape: (697, 15)\n",
+      "train2 shape: (2786, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train2, test2 = train_test_split2(df_reorder, percentage)\n",
+    "train_set2, validation_set2 = train_validation_split(train2, percentage)\n",
+    "print(f\"train_set2 shape: {train_set2.shape}\")\n",
+    "print(f\"validation_set2 shape: {validation_set2.shape}\")\n",
+    "print(f\"test2 shape: {test2.shape}\")\n",
+    "print(f\"train2 shape: {train2.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cc701803-29f4-4af4-a03b-a73bd741580f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train2 shape: (2223, 5, 14)\n",
+      "y_train2 shape: (2223,)\n",
+      "X_val2 shape: (553, 5, 14)\n",
+      "y_val2 shape: (553,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train2, y_train2, X_val2, y_val2 = windowing(train_set2, validation_set2, WINDOW, PREDICTION_SCOPE)\n",
+    "#Convert the returned list into arrays\n",
+    "X_train2 = np.array(X_train2)\n",
+    "y_train2 = np.array(y_train2)\n",
+    "X_val2 = np.array(X_val2)\n",
+    "y_val2 = np.array(y_val2)\n",
+    "print(f\"X_train2 shape: {X_train2.shape}\")\n",
+    "print(f\"y_train2 shape: {y_train2.shape}\")\n",
+    "print(f\"X_val2 shape: {X_val2.shape}\")\n",
+    "print(f\"y_val2 shape: {y_val2.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d74f4a42-1bbf-432b-9a3e-c523b8a467a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train2_new shape: (2223, 70)\n",
+      "X_val2_new shape: (553, 70)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#xgboost only allows two dimensional input\n",
+    "#reshape x_train and x_val into two dimension by joining the rows of the windowed days into one big input\n",
+    "X_train2_2dim = X_train2.reshape(X_train2.shape[0], -1)\n",
+    "X_val2_2dim = X_val2.reshape(X_val2.shape[0], -1)\n",
+    "print(f\"X_train2_new shape: {X_train2_2dim.shape}\")\n",
+    "print(f\"X_val2_new shape: {X_val2_2dim.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "194be085-49f4-4004-9548-7b8316a84d52",
    "metadata": {},
    "outputs": [
     {
@@ -544,49 +728,38 @@
        "             num_parallel_tree=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "xgb_model = xgb.XGBRegressor(gamma=1, n_estimators=200)\n",
-    "xgb_model.fit(X_train_2dim, y_train)"
+    "xgb_model.fit(X_train2_2dim, y_train2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "21b80f87-0105-4225-8a61-0d0becab9062",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import mean_absolute_error\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "4bced6c1-29b4-4579-a889-71e4c9fe02f1",
+   "execution_count": 34,
+   "id": "a31fa869-22e8-4008-a844-cc9bf56002b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.42983532697178"
+       "16.271520689814256"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_val = xgb_model.predict(X_val_2dim)\n",
-    "mae = mean_absolute_error(y_val, pred_val)\n",
-    "mae"
+    "pred_val2 = xgb_model.predict(X_val2_2dim)\n",
+    "mae2 = mean_absolute_error(y_val2, pred_val2)\n",
+    "mae2\n",
+    "#mae = 4.42983532697178"
    ]
   }
  ],
