--- a/xgboost_240807.ipynb
+++ b/xgboost_240807.ipynb
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "id": "15a979e3-1314-4277-a905-4082b5e5dd7d",
    "metadata": {},
    "outputs": [
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "id": "f80cbddb-4f6e-4432-922d-8d245d61ba9f",
    "metadata": {},
    "outputs": [
@@ -842,18 +842,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xf/rrndggj14ddg8j43w4kdc53m0000gn/T/ipykernel_17188/1936244221.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/xf/rrndggj14ddg8j43w4kdc53m0000gn/T/ipykernel_17188/4248799802.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  test_new[\"pred_tomorrow\"] = test_new[\"prediction\"].shift(-1)\n",
-      "/var/folders/xf/rrndggj14ddg8j43w4kdc53m0000gn/T/ipykernel_17188/1936244221.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/xf/rrndggj14ddg8j43w4kdc53m0000gn/T/ipykernel_17188/4248799802.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  test_new[\"target\"] = (test_new[\"pred_tomorrow\"] > test_new[\"prediction\"]).astype(int)\n"
+      "  test_new[\"target\"] = (test_new[\"pred_tomorrow\"] > test_new[\"prediction\"]).astype(int)\n",
+      "/var/folders/xf/rrndggj14ddg8j43w4kdc53m0000gn/T/ipykernel_17188/4248799802.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  test_new[\"status\"] = test_new[\"target\"].shift(1)\n"
      ]
     },
     {
@@ -895,9 +901,11 @@
        "      <th>prediction</th>\n",
        "      <th>pred_tomorrow</th>\n",
        "      <th>target</th>\n",
+       "      <th>status</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -939,6 +947,7 @@
        "      <td>137.550995</td>\n",
        "      <td>138.198807</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-06-23</th>\n",
@@ -960,6 +969,7 @@
        "      <td>138.198807</td>\n",
        "      <td>138.708969</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-06-24</th>\n",
@@ -981,6 +991,7 @@
        "      <td>138.708969</td>\n",
        "      <td>138.660843</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-06-25</th>\n",
@@ -1002,6 +1013,7 @@
        "      <td>138.660843</td>\n",
        "      <td>138.688858</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-06-28</th>\n",
@@ -1023,9 +1035,11 @@
        "      <td>138.688858</td>\n",
        "      <td>140.094894</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1065,6 +1079,7 @@
        "      <td>153.793320</td>\n",
        "      <td>155.770309</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-04-19</th>\n",
@@ -1086,6 +1101,7 @@
        "      <td>155.770309</td>\n",
        "      <td>157.729218</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-04-22</th>\n",
@@ -1107,6 +1123,7 @@
        "      <td>157.729218</td>\n",
        "      <td>157.970169</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-04-23</th>\n",
@@ -1128,6 +1145,7 @@
        "      <td>157.970169</td>\n",
        "      <td>156.389969</td>\n",
        "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2024-04-24</th>\n",
@@ -1149,10 +1167,11 @@
        "      <td>156.389969</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>692 rows × 18 columns</p>\n",
+       "<p>692 rows × 19 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1198,24 +1217,24 @@
        "2024-04-23  165.036908     157.9350  150.833092  151.90  157.970169   \n",
        "2024-04-24  165.011116     157.8775  150.743884  156.35  156.389969   \n",
        "\n",
-       "            pred_tomorrow  target  \n",
-       "Date                               \n",
-       "2021-06-22     138.198807       1  \n",
-       "2021-06-23     138.708969       1  \n",
-       "2021-06-24     138.660843       0  \n",
-       "2021-06-25     138.688858       1  \n",
-       "2021-06-28     140.094894       1  \n",
-       "...                   ...     ...  \n",
-       "2024-04-18     155.770309       1  \n",
-       "2024-04-19     157.729218       1  \n",
-       "2024-04-22     157.970169       1  \n",
-       "2024-04-23     156.389969       0  \n",
-       "2024-04-24            NaN       0  \n",
+       "            pred_tomorrow  target  status  \n",
+       "Date                                       \n",
+       "2021-06-22     138.198807       1     NaN  \n",
+       "2021-06-23     138.708969       1     1.0  \n",
+       "2021-06-24     138.660843       0     1.0  \n",
+       "2021-06-25     138.688858       1     0.0  \n",
+       "2021-06-28     140.094894       1     1.0  \n",
+       "...                   ...     ...     ...  \n",
+       "2024-04-18     155.770309       1     0.0  \n",
+       "2024-04-19     157.729218       1     1.0  \n",
+       "2024-04-22     157.970169       1     1.0  \n",
+       "2024-04-23     156.389969       0     1.0  \n",
+       "2024-04-24            NaN       0     0.0  \n",
        "\n",
-       "[692 rows x 18 columns]"
+       "[692 rows x 19 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1242,78 @@
    "source": [
     "test_new[\"pred_tomorrow\"] = test_new[\"prediction\"].shift(-1)\n",
     "test_new[\"target\"] = (test_new[\"pred_tomorrow\"] > test_new[\"prediction\"]).astype(int)\n",
+    "test_new[\"status\"] = test_new[\"target\"].shift(1)\n",
     "test_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "e01c32fd-34ad-491e-a897-8a4500809291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_new.to_csv(\"stock_0050_testset.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f89954d-06d9-4077-857b-ac5e86051d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###從這邊開始\n",
+    "# 所以什麼時候要買股票就很好找了：status 從 0 變成 1 的時候，1 的那天的開盤買進（因為 status 已經位移一天了喔）\n",
+    "# 從 prediction 的角度解釋就是：當 A.I. 的預測從 0 變成 1 的時候，1 的隔天的開盤買進\n",
+    "test_new[\"buy_cost\"] = test_new.Open[np.where((test_new.target == 1) * (test_new.target.shift(1) == 0))[0]]\n",
+    "\n",
+    "# 同理，賣股票也很好找：status 從 1 變成 0 的時候，0 的那天的開盤賣出\n",
+    "test_new[\"sell_cost\"] = test_new.Open[np.where((test_new.target == 0) * (test_new.target.shift(1) == 1))[0]]\n",
+    "\n",
+    "test_new = test_new.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a638e65f-19fb-4811-88cd-284b5f599085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 來算算每次買賣的報酬率吧！\n",
+    "# 一買一賣是剛好對應的，所以把買的成本以及賣的價格這兩欄的數字取出，就能輕易的算出交易報酬率\n",
+    "buy_cost = np.array(test_new[test_new.buy_cost != 0])\n",
+    "sell_price = np.array(test_new[test_new.sell_cost != 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "941296b8-245f-4d0f-85ea-3794f80d9181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 所以什麼時候要買股票就很好找了：status 從 0 變成 1 的時候，1 的那天的開盤買進（因為 status 已經位移一天了喔）\n",
+    "# 從 prediction 的角度解釋就是：當 A.I. 的預測從 0 變成 1 的時候，1 的隔天的開盤買進\n",
+    "test['buy_cost'] = test.open[np.where((test.status == 1) * (test.status.shift(1) == 0))[0]]\n",
+    "# 同理，賣股票也很好找：status 從 1 變成 0 的時候，0 的那天的開盤賣出\n",
+    "test['sell_cost'] = test.open[np.where((test.status == 0) * (test.status.shift(1) == 1))[0]]\n",
+    "# 把缺值補上 0\n",
+    "test = test.fillna(0)\n",
+    "\n",
+    "# 來算算每次買賣的報酬率吧！\n",
+    "# 一買一賣是剛好對應的，所以把買的成本以及賣的價格這兩欄的數字取出，就能輕易的算出交易報酬率\n",
+    "\n",
+    "buy_cost = np.array(test.buy_cost[test.buy_cost != 0])\n",
+    "sell_price = np.array(test.sell_cost[test.sell_cost != 0])\n",
+    "\n",
+    "# 但是回測的最後一天，有時候會發現還有持股尚未賣出喔！由於還沒賣就不能當作一次完整的交易，\n",
+    "# 所以最後一次的買進，我們先忽略\n",
+    "if len(buy_cost) > len(sell_price) :\n",
+    "    buy_cost = buy_cost[:-1]\n",
+    "\n",
+    "trade_return = sell_price / buy_cost - 1"
    ]
   }
  ],
